@@ -411,12 +411,19 @@ public class GameService {
         return new Response(currentTool.useTool(currentPlayer, currentTile), true);
     }
 
-    public Response pickFromFloor() {
+    public Response pickFromFloor(String direction) {
         Player currentPlayer = getCurrentPlayer();
-        Tile currentTile = currentPlayer.getTiles().get(0);
+        Direction currentDirection = Direction.getByName(direction);
+        if (currentDirection == null){
+            return new Response("wrong direction");
+        }
+        Tile currentTile = getTileByXAndY(currentPlayer.getTiles().getFirst().getX() + currentDirection.getXTransmit(),
+                currentPlayer.getTiles().getFirst().getY() + currentDirection.getYTransmit());
+        if (currentTile == null){
+            return new Response("out of bound");
+        }
         List<Structure> structures = App.getInstance().getCurrentGame().getVillage().findStructuresByTile(currentTile);
         Structure currentStructure = null;
-
         for (Structure structure : structures) {
             if (structure.getIsPickable()) {
                 currentStructure = structure;
@@ -746,6 +753,21 @@ public class GameService {
             return new Response("you do not carrying watering can");
         }
         return new Response("remain water: " + ((WateringCan) currentTool).getRemain(), true);
+    }
+
+    public Response showAbility(){
+        Player currentPlayer = getCurrentPlayer();
+        return new Response(makeStringTokenAbility(currentPlayer),true);
+    }
+
+    private String makeStringTokenAbility(Player player){
+        StringBuilder token = new StringBuilder();
+        for (Map.Entry<Ability, Integer> abilityIntegerEntry : player.getAbilities().entrySet()) {
+            token.append(abilityIntegerEntry.getKey().toString().toLowerCase()).append(" :\n").
+                    append("    xp: ").append(abilityIntegerEntry.getValue()).append("\n").
+                    append("    level: ").append(player.getAbilityLevel(abilityIntegerEntry.getKey())).append("\n");
+        }
+        return token.toString();
     }
 
     private Player getCurrentPlayer() {
@@ -1226,6 +1248,11 @@ public class GameService {
         }
         for (CropType value : CropType.values()) {
             if (value.getName().equalsIgnoreCase(name)) {
+                return value;
+            }
+        }
+        for (TreeType value : TreeType.values()) {
+            if (value.getName().equalsIgnoreCase(name)){
                 return value;
             }
         }
